# DeltaSpoof

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.py  cmd.txt  config.toml  install-systemd.sh  ip_list.txt  sni_list.txt
.github/workflows/: ci.yml  release.yml
crates/zerodpi/: Cargo.toml
crates/zerodpi-core/src/: config.rs  flow.rs  handler.rs  interceptor.rs  lib.rs  proxy.rs  proxy_tester.rs  sni_scanner.rs
crates/zerodpi-core/src/methods/: mod.rs  tcp_segmentation.rs  tls_record_frag.rs  wrong_checksum.rs  wrong_md5_tls_frag.rs  wrong_seq.rs  wrong_seq_wrong_md5.rs
crates/zerodpi-platform/src/: lib.rs  linux.rs  windows.rs
crates/zerodpi/src/: main.rs  tui.rs
deltaspoof-windows-x86_64/: config.toml  find-ip-results.json  ip_list.txt
