[package]
name = "zerodpi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "ZeroDPI: cross-platform DPI bypass via SNI spoofing."
default-run = "zerodpi"

[[bin]]
name = "zerodpi"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "net", "macros", "io-util", "sync", "time", "signal"] }
clap.workspace = true
ratatui.workspace = true
crossterm.workspace = true

rustls.workspace = true

zerodpi-core = { path = "../zerodpi-core" }
zerodpi-platform = { path = "../zerodpi-platform" }
